# pm-gui

./: .gitignore  Cargo.toml  MIGRATION.md  README.md
frontend/: app.js  index.html  style.css
frontend/components/: header.html  layout.html  main-view.html  sidebar.html
frontend/js/: i18n.js
frontend/locales/: en.json  tr.json
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/backend/: mod.rs  package_manager.rs  xml_parser.rs  xml_parser.rs:L214-243
src/config/: themes.rs
src/gui/: app.rs  events.rs  mod.rs  themes.rs
src/gui/components/: mod.rs  package_grid.rs
