[package]
name = "pisi-package-manager"
version = "0.1.0"
description = "Pisi GNU/Linux Package Manager"
authors = ["Pisi Linux Team"]
license = "GPL-2.0"
repository = "https://github.com/pisilinux/pm-gui"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pm_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
roxmltree = "0.19"
bincode = "1.3"
once_cell = "1.18"
base64 = "0.21"